i18n: add Modal translation tokens

--- a/src/core/locales/en/common.json
+++ b/src/core/locales/en/common.json
@@ -17,5 +17,8 @@
   "filter": {
     "match": "One match",
     "match_plural": "{{ count }} matches"
+  },
+  "modal": {
+    "close": "Close"
   }
 }
