--- a/src/core/locales/en/game.json
+++ b/src/core/locales/en/game.json
@@ -21,6 +21,24 @@
     "high": "High",
     "veryHigh": "Very High"
   },
+  "material": {
+    "aluminum": "Aluminum",
+    "aluminumAlloy": "Aluminum alloy",
+    "ceramic": "Ceramic",
+    "copper": "Copper",
+    "glass": "Glass",
+    "graphene": "Graphene",
+    "iron": "Iron",
+    "lithium": "Lithium",
+    "nanoCarbonAlloy": "Nanocarbon Alloy",
+    "plastic": "Plastic",
+    "silicone": "Silicone",
+    "tungsten": "Tungsten",
+    "zinc": "Zinc",
+    "tungstenCarbide": "Tungsten Carbide",
+    "resin": "Resin",
+    "compound": "Compound"
+  },
   "module": {
     "smallWindTurbine": "Small Wind Turbine",
     "smallSolarPanel": "Small Solar Panel",
@@ -28,6 +46,7 @@
     "smallBattery": "Small Battery",
     "qtRtg": "QT-RTG",
     "portableOxygenator": "Portable Oxygenator",
+    "mediumPrinter": "Medium Printer",
     "mediumWindTurbine": "Medium Wind Turbine",
     "mediumSolarPanel": "Medium Solar Panel",
     "mediumGenerator": "Medium Generator",
@@ -35,12 +54,21 @@
     "rtg": "RTG",
     "autoArm": "Auto Arm",
     "mediumShredder": "Medium Shredder",
+    "largePrinter": "Large Printer",
     "largeWindTurbine": "Large Wind Turbine",
     "largeSolarPanel": "Large Solar Panel",
+    "largeStorageSiloA": "Large Storage Silo A",
+    "largeStorageSiloB": "Large Storage Silo B",
+    "largeActiveStorage": "Large Active Storage",
+    "largeStorage": "Large Storage",
+    "exoRequestPlatform": "EXO Request Platform",
     "researchChamber": "Research Chamber",
     "smeltingFurnace": "Smelting Furnace",
     "soilCentrifuge": "Soil Centrifuge",
     "chemistryLab": "Chemistry Lab",
+    "tradePlatform": "Trade Platform",
+    "buggy": "Buggy",
+    "mediumRover": "Medium Rover",
     "atmosphericCondenser": "Atmospheric Condenser",
     "largeShredder": "Large Shredder",
     "shelter": "Shelter",
@@ -48,6 +76,9 @@
     "xlargeWindTurbine": "XL Wind Turbine",
     "solarArray": "Solar Array",
     "extraLargeShredder": "Extra Large Shredder",
+    "extraLargeStorage": "Extra Large Storage",
+    "autoExtractor": "Auto Extractor",
+    "landingPad": "Landing Pad",
     "wreckedSolarArray": "Wrecked Solar Array"
   }
 }
