--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -2,6 +2,62 @@
   "section": {
     "powerStatus": {
       "title": "Power Status"
+    },
+    "shoppingList": {
+      "title": "Shopping List"
+    },
+    "settings": {
+      "grid": "Grid",
+      "application": "Application",
+      "options": "Options"
+    }
+  },
+  "modal": {
+    "options": {
+      "title": "Options"
+    },
+    "settings": {
+      "title": "Settings"
+    },
+    "export": {
+      "title": "Export"
+    },
+    "import": {
+      "title": "Import"
+    }
+  },
+  "option": {
+    "persistEditorState": {
+      "name": "Persist editor state (TODO)",
+      "help": "Automatically save the current state of the application locally."
+    },
+    "showGrid": {
+      "name": "Show grid",
+      "help": "Display grid background in editor."
+    },
+    "hideInvalid": {
+      "name": "Hide invalid",
+      "help": "Don't display possibly invalid entities added to the editor. (This is a debug feature, most likely redundant)"
+    },
+    "showEditor": {
+      "name": "Show editor",
+      "help": "Display entity editor pop-up when selecting an entity in the editor."
+    },
+    "showEfficiencyAsMultiplier": {
+      "name": "Show efficiency as multiplier",
+      "help": "Display power generation efficiency of the current location as its scalar value."
+    },
+    "showPowerStatus": {
+      "name": "Show power status",
+      "help": "Toggles display of the current set-up's power generation and consumption."
+    },
+    "showShoppingList": {
+      "name": "Show shopping list",
+      "help": "Display a list of required materials to construct the current design."
+    },
+    "materialRequirementBreakdown": {
+      "name": "Material requirement breakdown (TODO)",
+      "help": "Break down refined and composite materials into their constituents"
     }
   }
 }
