i18n: add missing translation tokens

--- a/src/core/locales/en/common.json
+++ b/src/core/locales/en/common.json
@@ -10,6 +10,7 @@
   "options": "Options",
   "settings": "Settings",
   "location": "Location",
+  "import": "Import",
   "modules": "Modules",
   "grid": "Grid",
   "width": "Width",
