--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -23,7 +23,13 @@
       "title": "Export"
     },
     "import": {
-      "title": "Import"
+      "title": "Import",
+      "invalidJsonSyntax": {
+        "label": "Invalid JSON syntax"
+      },
+      "validationErrors": {
+        "label": "Validation errors"
+      }
     }
   },
   "option": {
