i18n: add missing translation strings

--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -20,7 +20,8 @@
       "title": "Settings"
     },
     "export": {
-      "title": "Export"
+      "title": "Export",
+      "explanationText": "Copy the contents of the textbox below and save it with the text editor of your choice."
     },
     "import": {
       "title": "Import",
