feat(canvas): support deletion, add missing translations

--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -3,6 +3,7 @@
     "solar": "Solar eff.",
     "wind": "Wind eff."
   },
+  "delete": "Delete",
   "production": "Production",
   "usage": "Usage",
   "sum": "Sum",
