feat(core): add missing translations, clean up bootstrap

--- a/src/core/locales/en/game.json
+++ b/src/core/locales/en/game.json
@@ -16,6 +16,7 @@
     "atrox": "Atrox"
   },
   "entity": {
+    "undefined": "",
     "qtRtg": "QT-RTG",
     "smallPrinter": "Small Printer",
     "smallGenerator": "Small Generator",
