--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -30,6 +30,8 @@
     "id": "ID",
     "origin": "Origin",
     "pos": "Position",
+    "offset": "Offset",
+    "actual": "Actual",
     "size": "Size"
   },
   "entityPalette": {
