feat(ui): add guide layer toggle

--- a/src/core/locales/en/ui.json
+++ b/src/core/locales/en/ui.json
@@ -13,7 +13,8 @@
   "option": {
     "locationEfficiency": "Location eff.",
     "powerBreakdown": "Power breakdown",
-    "stateDebug": "State debug"
+    "stateDebug": "State debug",
+    "showGuideLayer": "Show guide layer"
   },
   "powerType": {
     "constant": "Constant",
